# CHIP8-EMU

./: CMakeLists.txt
src/: CPU.cpp  CPU.h  gui.cpp  gui.h
